--- a/src/Containers/SideNav/SideNav.scss
+++ b/src/Containers/SideNav/SideNav.scss
@@ -1,8 +1,32 @@
 
+$color-one: rgb(233, 212, 96);
+$color-two: white;
+$color-three: rgb(221, 153, 26);
+$color-four: rgb(226, 173, 74);
+
+
+
 
 .sideNav__container{
-    border: 2px solid black;
+    background-color: $color-one;
     width: 100%;
-    height: 20vh;
-
+    height: 10vh;
 }
+
+.sideNav__searchBar{
+  margin: 5px;
+   display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.sideNav__filters{
+    margin: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+   
+    
+   
+}
+
