--- a/src/Containers/Main/Main.scss
+++ b/src/Containers/Main/Main.scss
@@ -1,10 +1,14 @@
-
+$color-one: rgb(233, 212, 96);
+$color-two: white;
+$color-three: rgb(120, 87, 25);
+$color-four: rgb(235, 183, 86);
 
 
 .main__container{
-    border:2px solid black;
     width: 100%;
-    height: 70vh;
+    height: 100vh;
+  
+    
 
    
 }
