styling for dekstop version is added

--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -21,3 +21,11 @@
     font-size:150%;
     color: $color-three;
 }
+
+
+
+@media screen and (min-width: 768px) {
+    .card__container {
+        width:15%;
+    }
+}
